[package]
name = "wdk-serial-port"
version = "0.1.0"
edition = "2021"
authors = ["GameGuyThrowaway"]
repository = "https://github.com/GameGuyThrowaway/wdk-serial-port"
readme = "README.md"
description = "A serial port interface library for my Ferrum Windows kernel driver development."

[dependencies]
wdk = ">=0.3.1"
wdk-alloc = ">=0.3.1"
wdk-sys = ">=0.4.0"
wdk-mutex = { git = "https://github.com/GameGuyThrowaway/wdk-mutex.git" }

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
