[package]
name = "wdk-serial-port"
version = "0.1.0"
edition = "2021"
authors = ["GameGuyThrowaway"]
repository = "https://github.com/GameGuyThrowaway/wdk-serial-port"
readme = "README.md"
description = "A serial port interface library for my Ferrum Windows kernel driver development."

[dependencies]
wdk = { git = "https://github.com/GameGuyThrowaway/windows-drivers-rs.git", branch = "wsk-bindings" }
wdk-sys = { git = "https://github.com/GameGuyThrowaway/windows-drivers-rs.git", branch = "wsk-bindings" }
wdk-alloc = { git = "https://github.com/GameGuyThrowaway/windows-drivers-rs.git", branch = "wsk-bindings" }
wdk-mutex = { git = "https://github.com/GameGuyThrowaway/wdk-mutex.git" }

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
